Avoid extra spacing on code samples within tables

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -44,4 +44,4 @@ div.highlighter-rouge { margin-bottom: 0.15em; }
 .logo { height: 200px; margin-right: 1em; margin-bottom: 0.5em; float: left; }
 
 // Space highlighted paragraphs to match <p> paragraphs
-div.highlighter-rouge { margin-bottom: 1.3em; }
+section > div.highlighter-rouge { margin-bottom: 1.3em; }
